--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+instance/*
+!instance/.gitignore
+.webassets-cache
+.env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -137,5 +142,30 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
 
-# End of https://mrkandreev.name/snippets/gitignore-generator/#Python,Next.js
+# If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
+# in your Git repository. Update and uncomment the following line accordingly.
+# <django-project-name>/staticfiles/
+
+# gitignore template for Jupyter Notebooks
+# website: http://jupyter.org/
+
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Remove previous ipynb_checkpoints
+#   git rm -r .ipynb_checkpoints/
+
+# End of https://mrkandreev.name/snippets/gitignore-generator/#Flask,Python,Django,JupyterNotebooks
